Saltos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PUNTO
    TEXTO

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     empty -> <empty>
Rule 2     E -> E2
Rule 3     E -> E2 MENOR E2 AUX_MENOR
Rule 4     E -> E2 MAYOR E2 AUX_MAYOR
Rule 5     E -> E2 MENOR_IGUAL E2 AUX_MENOR_IGUAL
Rule 6     E -> E2 MAYOR_IGUAL E2 AUX_MAYOR_IGUAL
Rule 7     E -> E2 IGUAL E2 AUX_IGUAL
Rule 8     E -> E2 DIFERENTE E2 AUX_DIFERENTE
Rule 9     AUX_MENOR -> empty
Rule 10    AUX_MAYOR -> empty
Rule 11    AUX_MENOR_IGUAL -> empty
Rule 12    AUX_MAYOR_IGUAL -> empty
Rule 13    AUX_IGUAL -> empty
Rule 14    AUX_DIFERENTE -> empty
Rule 15    E2 -> E3
Rule 16    E2 -> E2 OR E3 AUX_OR
Rule 17    E2 -> E2 MAS E3 AUX_MAS
Rule 18    E2 -> E2 MENOS E3 AUX_MENOS
Rule 19    AUX_OR -> empty
Rule 20    AUX_MAS -> empty
Rule 21    AUX_MENOS -> empty
Rule 22    E3 -> E4
Rule 23    E3 -> E3 AND E4 AUX_AND
Rule 24    E3 -> E3 POR E4 AUX_POR
Rule 25    E3 -> E3 ENTRE E4 AUX_ENTRE
Rule 26    E3 -> E3 MODULO E4 AUX_MODULO
Rule 27    AUX_AND -> empty
Rule 28    AUX_POR -> empty
Rule 29    AUX_ENTRE -> empty
Rule 30    AUX_MODULO -> empty
Rule 31    E4 -> T
Rule 32    E4 -> NOT T AUX_NOT
Rule 33    AUX_NOT -> empty
Rule 34    T -> PARENTESIS_IZQUIERDO E PARENTESIS_DERECHO
Rule 35    T -> FUNCTION
Rule 36    T -> ID_COMPLETO
Rule 37    T -> VALOR_INT
Rule 38    T -> VALOR_FLOAT
Rule 39    ID_COMPLETO -> ID RANGOS
Rule 40    RANGOS -> empty
Rule 41    RANGOS -> CORCHETE_IZQUIERDO VALOR_INT CORCHETE_DERECHO RANGOS
Rule 42    V -> TIPO DOS_PUNTOS A PUNTO_COMA
Rule 43    V -> TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
Rule 44    TIPO -> INT
Rule 45    TIPO -> FLOAT
Rule 46    V_M -> empty
Rule 47    V_M -> V V_M
Rule 48    A -> ID_COMPLETO ASIGNACION VALOR_INT
Rule 49    A -> ID_COMPLETO ASIGNACION VALOR_FLOAT
Rule 50    A -> ID_COMPLETO ASIGNACION E
Rule 51    A -> ID_COMPLETO ASIGNACION ID_COMPLETO
Rule 52    A -> ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 53    A -> ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 54    EST -> empty
Rule 55    EST -> LOOP_ EST
Rule 56    EST -> IF_ EST
Rule 57    EST -> A PUNTO_COMA EST
Rule 58    EST -> PROCEDURE PUNTO_COMA EST
Rule 59    EST -> FUNCTION PUNTO_COMA EST
Rule 60    EST -> PRINT PARENTESIS_IZQUIERDO COMILLAS COMILLAS PARENTESIS_DERECHO PUNTO_COMA EST
Rule 61    EST -> INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 62    EST -> ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 63    LOOP_ -> DO_WHILE
Rule 64    LOOP_ -> WHILE_
Rule 65    LOOP_ -> FOR_
Rule 66    DO_WHILE -> DO WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
Rule 67    WHILE_ -> WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
Rule 68    FOR_ -> FOR A PUNTO_COMA E AUX_FOR1 PUNTO_COMA A DOS_PUNTOS EST END LOOP PUNTO_COMA AUX_ENDFOR
Rule 69    AUX_FOR1 -> empty
Rule 70    AUX_ENDFOR -> empty
Rule 71    IF_ -> IF E AUX_IF DOS_PUNTOS EST ELSIF_
Rule 72    ELSIF_ -> END IF AUX_ENDIF PUNTO_COMA
Rule 73    ELSIF_ -> ELSE AUX_ELSE DOS_PUNTOS EST END IF AUX_ENDIF PUNTO_COMA
Rule 74    ELSIF_ -> ELSIF E AUX_ELSIF DOS_PUNTOS EST ELSIF_
Rule 75    AUX_IF -> empty
Rule 76    AUX_ELSIF -> empty
Rule 77    AUX_ELSE -> empty
Rule 78    AUX_ENDIF -> empty
Rule 79    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 80    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 81    F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
Rule 82    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 83    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 84    PROGRAMA -> MP PROGRAMA_H
Rule 85    PROGRAMA_H -> empty
Rule 86    PROGRAMA_H -> P PROGRAMA_H
Rule 87    PROGRAMA_H -> F PROGRAMA_H

Terminals, with rules where they appear

AND                  : 23
ASIGNACION           : 48 49 50 51 52 53
BEGIN                : 79 80 81 82 83
COMILLAS             : 60 60
CORCHETE_DERECHO     : 41
CORCHETE_IZQUIERDO   : 41
DIFERENTE            : 8
DO                   : 66
DOS_PUNTOS           : 42 43 66 67 68 71 73 74 79 80 81 82 83
ELSE                 : 73
ELSIF                : 74
END                  : 66 67 68 72 73 79 80 81 82 83
ENTRE                : 25
FLOAT                : 45
FOR                  : 68
FUNCTION             : 35 59 81
ID                   : 39 52 62 79 80 81 81
IF                   : 71 72 73
IGUAL                : 7
INPUT                : 53 61
INT                  : 44
LOOP                 : 66 67 68
MAIN                 : 82 83
MAS                  : 17
MAYOR                : 4
MAYOR_IGUAL          : 6
MENOR                : 3
MENOR_IGUAL          : 5
MENOS                : 18
MODULO               : 26
NOT                  : 32
OR                   : 16
PARENTESIS_DERECHO   : 34 52 53 60 61 62 79 80 81 82 83
PARENTESIS_IZQUIERDO : 34 52 53 60 61 62 79 80 81 82 83
POR                  : 24
PRINT                : 60
PROCEDURE            : 58 79 79 80 80 82 82 83 83
PUNTO                : 
PUNTO_COMA           : 42 43 57 58 59 60 61 62 66 67 68 68 68 72 73 79 79 80 80 80 81 81 81 82 82 83 83 83
RETURN               : 80 81 83
TEXTO                : 
VALOR_FLOAT          : 38 49
VALOR_INT            : 37 41 48
WHILE                : 66 67
error                : 

Nonterminals, with rules where they appear

A                    : 42 57 68 68
AUX_AND              : 23
AUX_DIFERENTE        : 8
AUX_ELSE             : 73
AUX_ELSIF            : 74
AUX_ENDFOR           : 68
AUX_ENDIF            : 72 73
AUX_ENTRE            : 25
AUX_FOR1             : 68
AUX_IF               : 71
AUX_IGUAL            : 7
AUX_MAS              : 17
AUX_MAYOR            : 4
AUX_MAYOR_IGUAL      : 6
AUX_MENOR            : 3
AUX_MENOR_IGUAL      : 5
AUX_MENOS            : 18
AUX_MODULO           : 26
AUX_NOT              : 32
AUX_OR               : 16
AUX_POR              : 24
DO_WHILE             : 63
E                    : 34 50 66 67 68 71 74
E2                   : 2 3 3 4 4 5 5 6 6 7 7 8 8 16 17 18
E3                   : 15 16 17 18 23 24 25 26
E4                   : 22 23 24 25 26
ELSIF_               : 71 74
EST                  : 55 56 57 58 59 60 61 62 66 67 68 71 73 74 79 80 81 82 83
F                    : 87
FOR_                 : 65
ID_COMPLETO          : 36 43 48 49 50 51 51 52 53
IF_                  : 56
LOOP_                : 55
MP                   : 84
P                    : 86
PROGRAMA             : 0
PROGRAMA_H           : 84 86 87
RANGOS               : 39 41
T                    : 31 32
TIPO                 : 42 43 81
V                    : 47
V_M                  : 47 79 80 81 82 83
WHILE_               : 64
empty                : 9 10 11 12 13 14 19 20 21 27 28 29 30 33 40 46 54 69 70 75 76 77 78 85

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (84) PROGRAMA -> . MP PROGRAMA_H
    (82) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PROCEDURE       shift and go to state 3

    PROGRAMA                       shift and go to state 1
    MP                             shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (84) PROGRAMA -> MP . PROGRAMA_H
    (85) PROGRAMA_H -> . empty
    (86) PROGRAMA_H -> . P PROGRAMA_H
    (87) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (79) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (81) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    PROGRAMA_H                     shift and go to state 4
    empty                          shift and go to state 5
    P                              shift and go to state 6
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 3

    (82) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    MAIN            shift and go to state 12


state 4

    (84) PROGRAMA -> MP PROGRAMA_H .

    $end            reduce using rule 84 (PROGRAMA -> MP PROGRAMA_H .)


state 5

    (85) PROGRAMA_H -> empty .

    $end            reduce using rule 85 (PROGRAMA_H -> empty .)


state 6

    (86) PROGRAMA_H -> P . PROGRAMA_H
    (85) PROGRAMA_H -> . empty
    (86) PROGRAMA_H -> . P PROGRAMA_H
    (87) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (79) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (81) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    P                              shift and go to state 6
    PROGRAMA_H                     shift and go to state 13
    empty                          shift and go to state 5
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 7

    (87) PROGRAMA_H -> F . PROGRAMA_H
    (85) PROGRAMA_H -> . empty
    (86) PROGRAMA_H -> . P PROGRAMA_H
    (87) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (79) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (81) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    F                              shift and go to state 7
    PROGRAMA_H                     shift and go to state 14
    empty                          shift and go to state 5
    P                              shift and go to state 6
    TIPO                           shift and go to state 9

state 8

    (79) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    ID              shift and go to state 15


state 9

    (81) F -> TIPO . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    ID              shift and go to state 16


state 10

    (44) TIPO -> INT .

    ID              reduce using rule 44 (TIPO -> INT .)
    DOS_PUNTOS      reduce using rule 44 (TIPO -> INT .)


state 11

    (45) TIPO -> FLOAT .

    ID              reduce using rule 45 (TIPO -> FLOAT .)
    DOS_PUNTOS      reduce using rule 45 (TIPO -> FLOAT .)


state 12

    (82) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 17


state 13

    (86) PROGRAMA_H -> P PROGRAMA_H .

    $end            reduce using rule 86 (PROGRAMA_H -> P PROGRAMA_H .)


state 14

    (87) PROGRAMA_H -> F PROGRAMA_H .

    $end            reduce using rule 87 (PROGRAMA_H -> F PROGRAMA_H .)


state 15

    (79) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 18


state 16

    (81) F -> TIPO ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 19


state 17

    (82) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 20


state 18

    (79) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 21


state 19

    (81) F -> TIPO ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 22


state 20

    (82) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 23


state 21

    (79) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 24


state 22

    (81) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    DOS_PUNTOS      shift and go to state 25


state 23

    (82) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V_M                            shift and go to state 26
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 24

    (79) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V_M                            shift and go to state 30
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 25

    (81) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    TIPO                           shift and go to state 29
    V_M                            shift and go to state 31
    empty                          shift and go to state 27
    V                              shift and go to state 28

state 26

    (82) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 32


state 27

    (46) V_M -> empty .

    BEGIN           reduce using rule 46 (V_M -> empty .)


state 28

    (47) V_M -> V . V_M
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V                              shift and go to state 28
    V_M                            shift and go to state 33
    empty                          shift and go to state 27
    TIPO                           shift and go to state 29

state 29

    (42) V -> TIPO . DOS_PUNTOS A PUNTO_COMA
    (43) V -> TIPO . DOS_PUNTOS ID_COMPLETO PUNTO_COMA

    DOS_PUNTOS      shift and go to state 34


state 30

    (79) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 35


state 31

    (81) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    BEGIN           shift and go to state 36


state 32

    (82) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PUNTO_COMA      shift and go to state 37


state 33

    (47) V_M -> V V_M .

    BEGIN           reduce using rule 47 (V_M -> V V_M .)


state 34

    (42) V -> TIPO DOS_PUNTOS . A PUNTO_COMA
    (43) V -> TIPO DOS_PUNTOS . ID_COMPLETO PUNTO_COMA
    (48) A -> . ID_COMPLETO ASIGNACION VALOR_INT
    (49) A -> . ID_COMPLETO ASIGNACION VALOR_FLOAT
    (50) A -> . ID_COMPLETO ASIGNACION E
    (51) A -> . ID_COMPLETO ASIGNACION ID_COMPLETO
    (52) A -> . ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (53) A -> . ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (39) ID_COMPLETO -> . ID RANGOS

    ID              shift and go to state 40

    A                              shift and go to state 38
    ID_COMPLETO                    shift and go to state 39

state 35

    (79) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (80) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PUNTO_COMA      shift and go to state 41


state 36

    (81) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PUNTO_COMA      shift and go to state 42


state 37

    (82) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA . EST END PROCEDURE PUNTO_COMA
    (83) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA . EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (54) EST -> . empty
    (55) EST -> . LOOP_ EST
    (56) EST -> . IF_ EST
    (57) EST -> . A PUNTO_COMA EST
    (58) EST -> . PROCEDURE PUNTO_COMA EST
    (59) EST -> . FUNCTION PUNTO_COMA EST
    (60) EST -> . PRINT PARENTESIS_IZQUIERDO COMILLAS COMILLAS PARENTESIS_DERECHO PUNTO_COMA EST
    (61) EST -> . INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
    (62) EST -> . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
    (1) empty -> .
    (63) LOOP_ -> . DO_WHILE
    (64) LOOP_ -> . WHILE_
    (65) LOOP_ -> . FOR_
    (71) IF_ -> . IF E AUX_IF DOS_PUNTOS EST ELSIF_
    (48) A -> . ID_COMPLETO ASIGNACION VALOR_INT
    (49) A -> . ID_COMPLETO ASIGNACION VALOR_FLOAT
    (50) A -> . ID_COMPLETO ASIGNACION E
    (51) A -> . ID_COMPLETO ASIGNACION ID_COMPLETO
    (52) A -> . ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (53) A -> . ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (66) DO_WHILE -> . DO WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
    (67) WHILE_ -> . WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
    (68) FOR_ -> . FOR A PUNTO_COMA E AUX_FOR1 PUNTO_COMA A DOS_PUNTOS EST END LOOP PUNTO_COMA AUX_ENDFOR
    (39) ID_COMPLETO -> . ID RANGOS

    PROCEDURE       shift and go to state 43
    FUNCTION        shift and go to state 49
    PRINT           shift and go to state 50
    INPUT           shift and go to state 51
    ID              shift and go to state 52
    END             reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    IF              shift and go to state 56
    DO              shift and go to state 58
    WHILE           shift and go to state 59
    FOR             shift and go to state 60

    EST                            shift and go to state 44
    empty                          shift and go to state 45
    LOOP_                          shift and go to state 46
    IF_                            shift and go to state 47
    A                              shift and go to state 48
    DO_WHILE                       shift and go to state 53
    WHILE_                         shift and go to state 54
    FOR_                           shift and go to state 55
    ID_COMPLETO                    shift and go to state 57

state 38

    (42) V -> TIPO DOS_PUNTOS A . PUNTO_COMA

    PUNTO_COMA      shift and go to state 61


state 39

    (43) V -> TIPO DOS_PUNTOS ID_COMPLETO . PUNTO_COMA
    (48) A -> ID_COMPLETO . ASIGNACION VALOR_INT
    (49) A -> ID_COMPLETO . ASIGNACION VALOR_FLOAT
    (50) A -> ID_COMPLETO . ASIGNACION E
    (51) A -> ID_COMPLETO . ASIGNACION ID_COMPLETO
    (52) A -> ID_COMPLETO . ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (53) A -> ID_COMPLETO . ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO

    PUNTO_COMA      shift and go to state 62
    ASIGNACION      shift and go to state 63


state 40

    (39) ID_COMPLETO -> ID . RANGOS
    (40) RANGOS -> . empty
    (41) RANGOS -> . CORCHETE_IZQUIERDO VALOR_INT CORCHETE_DERECHO RANGOS
    (1) empty -> .

    CORCHETE_IZQUIERDO shift and go to state 66
    PUNTO_COMA      reduce using rule 1 (empty -> .)
    ASIGNACION      reduce using rule 1 (empty -> .)
    AND             reduce using rule 1 (empty -> .)
    POR             reduce using rule 1 (empty -> .)
    ENTRE           reduce using rule 1 (empty -> .)
    MODULO          reduce using rule 1 (empty -> .)
    MENOR           reduce using rule 1 (empty -> .)
    MAYOR           reduce using rule 1 (empty -> .)
    MENOR_IGUAL     reduce using rule 1 (empty -> .)
    MAYOR_IGUAL     reduce using rule 1 (empty -> .)
    IGUAL           reduce using rule 1 (empty -> .)
    DIFERENTE       reduce using rule 1 (empty -> .)
    OR              reduce using rule 1 (empty -> .)
    MAS             reduce using rule 1 (empty -> .)
    MENOS           reduce using rule 1 (empty -> .)
    DOS_PUNTOS      reduce using rule 1 (empty -> .)
    PARENTESIS_DERECHO reduce using rule 1 (empty -> .)

    RANGOS                         shift and go to state 64
    empty                          shift and go to state 65

state 41
